test/corpus/control_flow.txt
========
Match statement 
========

func prettyprint() {
    match this {
        case Fahrenheit(f) => {
            return "{0} F".format(f);
        }, 
        case Celsius(c) => {
            return "{0} C".format(c);
        }
    }
}

---


========
If statement
========

func prettyprint(a) {
    if a == 5 {
        println("a is 5");
    }
    
    if a == 5 {
        println("a is 5");
    } else {
        println("a is neither 5 nor 10");
    }
    
    if a == 5 {
        println("a is 5");
    } elsif a == 10 {
        println("a is 10");
    }
    
    if a == 5 {
        println("a is 5");
    } elsif a == 10 {
        println("a is 10");
    } else {
        println("a is neither 5 nor 10");
    }
}

---



=======
For statement
=======

func prettyprint(a) {
    for i in [] {
        println(i);
    }
    
    for x in [] {
        println(x);
    } else {
        println("This list is empty!");
    }
}

---

(source_file
  (function_definition
    (identifier)
    (parameter_list
      (parameter
        (identifier)))
    (logic_block
      (control_flow_statement
        (for_statement
          (identifier)
          (expression
            (array))
          (logic_block
            (expression_statement
              (expression
                (function_call
                  (identifier)
                  (argument_list
                    (expression
                      (identifier)))))))))
      (control_flow_statement
        (for_statement
          (identifier)
          (expression
            (array))
          (logic_block
            (expression_statement
              (expression
                (function_call
                  (identifier)
                  (argument_list
                    (expression
                      (identifier)))))))
          (else_clause
            (logic_block
              (expression_statement
                (expression
                  (function_call
                    (identifier)
                    (argument_list
                      (expression
                        (string)))))))))))))

=======
While statement
=======

func prettyprint(a) {
    while x > 0 {
        println("x is positive");
        x -= 1;
    }
    
    while x > 0 {
        println("x is positive");
        x -= 1;
    } else {
        println("x is <= 0");
    }
}

---

(source_file
  (function_definition
    (identifier)
    (parameter_list
      (parameter
        (identifier)))
    (logic_block
      (control_flow_statement
        (while_statement
          (expression
            (identifier)
            (operator)
            (expression
              (number)))
          (logic_block
            (expression_statement
              (expression
                (function_call
                  (identifier)
                  (argument_list
                    (expression
                      (string))))))
            (expression_statement
              (expression
                (identifier)
                (operator)
                (expression
                  (number)))))))
      (control_flow_statement
        (while_statement
          (expression
            (identifier)
            (operator)
            (expression
              (number)))
          (logic_block
            (expression_statement
              (expression
                (function_call
                  (identifier)
                  (argument_list
                    (expression
                      (string))))))
            (expression_statement
              (expression
                (identifier)
                (operator)
                (expression
                  (number)))))
          (else_clause
            (logic_block
              (expression_statement
                (expression
                  (function_call
                    (identifier)
                    (argument_list
                      (expression
                        (string)))))))))))))
