test/corpus/extensions.txt
================
Extension definition
================

extension Foo {
    func add(x) {
        return 3;
    }
}

---
(source_file
(extension_definition
    (identifier)
    (struct_block
      (function_definition
        (identifier)
        (parameter_list
          (parameter
            (identifier)))
        (logic_block
          (return_statement
            (expression
              (number))))))))
